fixed spacing again

--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ header video {
 .aboutme .photo img {
     width: 350px;
     height: auto;
-    padding-bottom: 5em;
+    padding-bottom: 10em;
 }
 
 .aboutme .nametag {
@@ -366,7 +366,7 @@ header video {
     padding-right: 8em;
     padding-left: 8em;
     padding-top: 15em;
-    padding-bottom: 12em;
+    padding-bottom: 11em;
 }
 
 .resumesec h1 {
